Final not checked version

--- a/RSA_lab_2/RSA_lab_2.csproj
+++ b/RSA_lab_2/RSA_lab_2.csproj
@@ -170,6 +170,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Scripts\Site.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
